--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,8 @@ body {
 	margin: 20px;
 }
 
-ol, ul {
-	padding-left: 30px;
+ol, ul, li {
+	padding-left: 0px;
 	list-style: none;
 }
 
@@ -14,27 +14,62 @@ ol, ul {
 	display: table;
 }
 
+.btn {
+	display:inline-block;
+	padding:0.3em 1.2em;
+	margin:0 0.1em 0.1em 0;
+	border:0.16em solid rgba(255,255,255,0);
+	border-radius:2em;
+	box-sizing: border-box;
+	text-decoration:none;
+	font-family:'Roboto',sans-serif;
+	font-weight: 400;
+	color: #FFFFFF;
+	text-shadow: 0 0.04em 0.04em rgba(0,0,0,0.35);
+	text-align:center;
+	transition: all 0.2s;
+	border-radius: 3px;
+	vertical-align: middle;
+	text-align: center; 
+	font-size: 14px;
+}
+.btn:hover {
+	border-color: blue;
+}
+
+.sort-btn {
+	background: #2a17ff;
+}
+
+.step-btn {
+	background: #8c7aff;
+	width: 300px;
+}
+
 .status {
 	margin-bottom: 10px;
+	font-weight: bold;
+	font-size: 18px;
 }
 
 .square {
 	background: #fff;
 	border: 1px solid #999;
 	float: left;
-	font-size: 24px;
+	font-size: 32px;
 	font-weight: bold;
 	line-height: 34px;
-	height: 34px;
+	height: 80px;
 	margin-right: -1px;
 	margin-top: -1px;
 	padding: 0;
 	text-align: center;
-	width: 34px;
+	width: 80px;
 }
 
-.bold {
+.current-step {
 	font-weight: bold;
+	background: #2a17ff;
 }
 
 .winner-square {
