updated readme file

--- a/src/index.css
+++ b/src/index.css
@@ -54,7 +54,7 @@ ol, ul, li {
 
 .square {
 	background: #fff;
-	border: 1px solid #999;
+	border: 1.5px solid #2a17ff;
 	float: left;
 	font-size: 32px;
 	font-weight: bold;
